# databricks-platform-ai-kit

./: .gitignore  LICENSE.md  README.md  SECURITY.md  install.sh
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/hooks/: block-cred-reads.py
.claude/skills/deployment-verification/: SKILL.md
.claude/skills/identity-governance/: SKILL.md
.claude/skills/platform-provisioning/: AWS.md  AZURE.md  GCP.md  SKILL.md  aws-1-auth.md  aws-2-deploy.md  aws-3-gotchas.md  azure-1-auth.md  azure-2-deploy.md  azure-3-gotchas.md
.claude/skills/private-networking/: AWS.md  SKILL.md
.claude/skills/unity-catalog-setup/: AWS.md  AZURE.md  GCP.md  SKILL.md
.claude/skills/workspace-config/: SKILL.md
core/: pyproject.toml
core/databricks_platform_core/: __init__.py  account_api.py  auth.py  credentials.py  identity.py  templates.py  terraform_runner.py
docs/: index.html
mcp-server/: pyproject.toml
mcp-server/databricks_platform_mcp/: server.py
mcp-server/databricks_platform_mcp/tools/: provisioning.py
skills/identity-governance/: SKILL.md
skills/platform-provisioning/: AWS.md  AZURE.md  SKILL.md
skills/private-networking/: AWS.md  AZURE.md
skills/unity-catalog-setup/: AWS.md  AZURE.md  SKILL.md
skills/workspace-config/: SKILL.md
