[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "databricks-platform-core"
version = "0.1.0"
description = "Core library for Databricks workspace provisioning and account management"
requires-python = ">=3.10"
dependencies = [
    "databricks-sdk>=0.30.0",
    "pydantic",
    "pyyaml",
    "requests",
]

[project.optional-dependencies]
all = [
    "azure-mgmt-resource",
    "azure-mgmt-storage",
    "azure-identity",
]

[tool.hatch.build.targets.wheel]
packages = ["databricks_platform_core"]
