[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "databricks-platform-mcp"
version = "0.1.0"
description = "MCP server for Databricks platform provisioning"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "databricks-platform-core",
]

[project.scripts]
databricks-platform-mcp = "databricks_platform_mcp.server:main"

[tool.setuptools.packages.find]
include = ["databricks_platform_mcp*"]
